# AL-Pre-Commit-Hooks

./: .al-hooks.code-workspace  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements-dev.txt  setup.cfg
al_hooks/: compile_al_app.py  util.py
testing/resources/: OkALObject.al
