[metadata]
name = al-hooks
description = Hooks to use for the AL programming language
version = 0.1.1
author = cegekaJG
license = "MIT"
url = "http://github.com/cegekaJG"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*
    powershell*

[options.entry_points]
console_scripts =
    validate-textmate-grammar = al_hooks.validate_textmate_grammar:main
    compile-al-app = al_hooks.compile_al_app:main

[bdist_wheel]
universal = True
