[metadata]
name = al_pre_commit_hooks
version = 0.2.2
description = Hooks to use for the AL programming language
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/cegekaJG/AL-Pre-Commit-Hooks"
author = cegekaJG
license = "MIT"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*
    powershell*

[options.entry_points]
console_scripts =
    validate-textmate-grammar = al_hooks.validate_textmate_grammar:main
    compile-al-app = al_hooks.compile_al_app:main

[bdist_wheel]
universal = True
